--- a/yumbo-parent/yumbo-005-blog-service-8003/pom.xml
+++ b/yumbo-parent/yumbo-005-blog-service-8003/pom.xml
@@ -9,17 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>yumbo-001-commons</artifactId>
-    <description>工具包聚合</description>
-    <packaging>pom</packaging>
-
-
-    <modules>
-        <module>yumbo-commons-utils</module>
-        <module>yumbo-api-utils</module>
-        <module>yumbo-service-utils</module>
-        <module>yumbo-web-utils</module>
-    </modules>
+    <artifactId>yumbo-005-blog-service-8003</artifactId>
+    <description>博客服务</description>
 
 
 </project>
