--- a/yumbo-parent/yumbo-001-commons/yumbo-api-utils/pom.xml
+++ b/yumbo-parent/yumbo-001-commons/yumbo-api-utils/pom.xml
@@ -26,6 +26,17 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <!--spring-boot-starter-jdbc-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <!-- druid-spring-boot-starter -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+
         <!--lombok 自动生成get set toString等方法简化类代码-->
         <dependency>
             <groupId>org.projectlombok</groupId>
